--- a/app/globals.css
+++ b/app/globals.css
@@ -2,21 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -25,3 +11,22 @@ body {
     text-wrap: balance;
   }
 }
+
+@layer base {
+  body {
+    @apply  bg-primary text-white leading-loose;
+  }
+
+  .h1 {
+    @apply text-[48px] xl:text-[80px] leading-[1.1] font-semibold;
+  }
+
+  .h2 {
+    @apply text-[36px] xl:text-[48px] leading-[1.25] font-semibold;
+  }
+
+  .h3 {
+    @apply text-[28px] xl:text-[24px] leading-[1.5] font-semibold;
+  }
+}
+
