--- a/app/globals.css
+++ b/app/globals.css
@@ -30,3 +30,10 @@ body {
   }
 }
 
+.text-outline {
+  -webkit-text-stroke: 1px #ffffff;
+}
+
+.text-outline-hover {
+  -webkit-text-stroke: 1px #00ff99;
+}
